--- a/src/details.html
+++ b/src/details.html
@@ -32,6 +32,8 @@
     <link rel="shortcut icon" href="//img.alicdn.com/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/details.css">
     <link rel="stylesheet" href="css/details.css" />
+
+    <script src="script/thirdplugins/jquery.js"></script>
 </head>
 
 <body class="tab-active-index-0 tb-detail">
@@ -178,7 +180,7 @@
                                             <div id="J_Title" class="tb-title">
                                                 <h3 class="tb-main-title">
                                                     <span class="tb-stuff-status">定制</span>
-                                                    北欧ins风现代简约布艺沙发客厅整装小户型乳胶三人网红沙发组合
+                                                    
                                                 </h3>
 
                                                 <p class="tb-subtitle"></p>
@@ -257,98 +259,14 @@
                                                     <dl class="J_Prop tb-prop tb-clear ">
                                                         <dt class="tb-property-type">几人坐</dt>
                                                         <dd>
-                                                            <ul data-property="几人坐" class="J_TSaleProp tb-clearfix">
+                                                            <!-- 几人坐 -->
+                                                            <ul id="sit" class="J_TSaleProp tb-clearfix">
                                                                 <li data-value="31480:1340620437">
                                                                     <a href="javascript:void(0);">
                                                                         <span>单人位（100cm）</span>
                                                                     </a>
                                                                     <i>已选中</i>
                                                                 </li>
-
-                                                                <li data-value="31480:1478779769">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>双人位（160cm）</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:1255834286">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>三人位（210cm）</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:322923186">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>四人位（240cm）</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:744547217">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>大四人位（280cm）</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:538124521">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>双人位+脚踏</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:240220803">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>三人位+脚踏</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:452566512">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>四人位+脚踏</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:957144260">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>大四人位+脚踏</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:452606632">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>三人位+单人位</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:932354667">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>三人位+单人位+脚踏</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:553882289">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>三人位+单人位+单人位</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
-                                                                <li data-value="31480:388316643">
-                                                                    <a href="javascript:void(0);">
-                                                                        <span>三人位+双人位+单人位</span>
-                                                                    </a>
-                                                                    <i>已选中</i>
-                                                                </li>
-
                                                             </ul>
                                                         </dd>
                                                     </dl>
@@ -819,6 +737,10 @@
 
     <div id="J_sidebar_config">
     </div>
+
+
+
+    <script src="script/js/details.js"></script>
 
 </body>
 
